# tree_craftsman

./: .gitignore  .releaserc.json  CHANGELOG.md  DESIGN.md  README.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
logs/: tree_logs.jsonl
src/tree_craftsman/: __init__.py  __main__.py  generator.py  logger.py
tests/: conftest.py  test_rotating_logger.py
tools/: __init__.py  bump_version.py  generate_sample_tree.py  test_bump_version.py
