[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-tree-craftsman"
version = "0.1.0"
description = "Generate ASCII tree and machine JSON from a directory"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "orjson",
    "structlog",
    "pendulum",
    "click",
    "rich",
]

[project.scripts]
pytree = "tree_craftsman.__main__:cli"