[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-tree-craftsman"
version = "0.1.0"
description = "Generate ASCII tree and machine JSON from a directory"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "orjson",
    "structlog",
    "pendulum",
    "click",
    "rich",
]

[project.scripts]
pytree = "tree_craftsman.__main__:cli"

[project.optional-dependencies]
# 開発用（フォーマット・静的解析・テスト等）
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "ruff",
    "pytest",
    # Python <3.11 の環境で tomllib が無い場合のフォールバック
    "toml",
]

# テスト専用（必要に応じて pytest プラグイン等を追加）
test = [
    "pytest",
]